# eden-test-huawei

./: CMAKE_FIX_VERIFICATION.md  CRASH_FIX_REPORT.md  DEPENDENCY_ANALYSIS_REPORT.md  GRADLE_ABI_FIX.md  HUAWEI_CMAKE_INTEGRATION_COMPLETE.md  HUAWEI_INSTALLER_README.md  HUAWEI_SDK_ANALYSIS.md  LIBRARY_SANITY_CHECK_REPORT.md  LIBRARY_UPDATE_CGKIT.md  NAMESPACE_FIX_REPORT.md  OFFICIAL_LIBRARIES_FINAL.md  QUICK_BUILD_REFERENCE.md  RTLD_GLOBAL_FIX.md  analyze_elf.py  huawei_cmake_snippet.txt  huawei_install_smart.py
.github/workflows/: build.yml
huawei_raw/cgsdk-plugin-6.1.0.300/cgsdk-plugin-FluidShake/pkg-for-thirdpartyengine/include/: FluidShake.h
huawei_raw/cgsdk-plugin-6.1.0.300/cgsdk-plugin-SkeletonAnimation/pkg-for-thirdpartyengine/include/: SkeletonAnimationDefine.h  SkeletonAnimationInterface.h
huawei_raw/cgsdk-plugin-6.1.0.300/cgsdk-plugin-aifacemod/pkg-for-thirdpartyengine/include/: AIFaceMod.h
huawei_raw/cgsdk-plugin-6.1.0.300/cgsdk-plugin-aifacemod/pkg-for-thirdpartyengine/win-dll/: CharacterAdapter.lib  CharacterInterface.h
huawei_raw/cgsdk-plugin-6.1.0.300/cgsdk-plugin-base-5.0.4.300/Include/Core/: Types.h
huawei_raw/cgsdk-plugin-6.1.0.300/cgsdk-plugin-base-5.0.4.300/Include/PluginManager/: IPlugin.h
huawei_raw/cgsdk-plugin-6.1.0.300/cgsdk-plugin-base-5.0.4.300/Include/Utils/: Param.h
huawei_raw/cgsdk-plugin-6.1.0.300/cgsdk-plugin-occlusionculling-5.1.0.300/cgsdk-plugin-occlusionculling/pkg-for-cgsdk/include/: HiCullingCgkit.h
huawei_raw/cgsdk-plugin-6.1.0.300/cgsdk-plugin-occlusionculling-5.1.0.300/cgsdk-plugin-occlusionculling/pkg-for-thirdpartyengine/include/: HiCulling.h
huawei_raw/cgsdk-plugin-6.1.0.300/cgsdk-plugin-offlinesuperresolution-5.0.4.301/cgsdk-plugin-offlinesuperresolution/pkg-for-thirdpartyengine/include/: OSRPluginCommon.h  OSRPluginInterface.h
huawei_raw/cgsdk-plugin-6.1.0.300/cgsdk-plugin-temporalAntiAliasing-6.0.0.300/pkg-for-thirdpartyengine/include/: TaaRenderAPI.h
huawei_raw/cgsdk-plugin-6.1.0.300/cgsdk-plugin-volumecloud-5.2.0.303/cgsdk-plugin-volumecloud/pkg-for-thirdpartyengine/include/: BakeShapeAPI.h  VolumeCloudRenderAPI.h  (+1 more)
huawei_raw/cgsdk-plugin-6.1.0.300/cgsdk-plugin-volumefog-6.0.0.300/pkg-for-thirdpartyengine/include/: VolumeFogParas.h  VolumeFogRenderAPI.h
src/android/app/: build.gradle.kts
src/android/app/src/main/: AndroidManifest.xml
src/android/app/src/main/jni/: CMakeLists.txt  huawei_osr_loader.h
